[tool.poetry]
name = "unet-practice"
version = "0.1.0"
description = ""
authors = ["Derek Rodriguez <derek.rodriguez@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchaudio = "^2.2.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
